css/main.css
html {
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  background-color: #fdf6e3;
}

header, footer {
  font-size: 1.5rem;
}

nav {
  font-family: sans-serif;
}

.logo {
  text-transform: uppercase;
}

.wrapper {
  background-color: #eee8d5;
}

#contents, #favs, #facts, #types {
  color: #93a1a1;
}

.wrapper > .dfn {
  background-color: #b58900;
}

.wrapper > .dfn strong {
  color: #fff;
}

a:not(.no-highlight) {
  background-color: #719e07;
}

[href^="http://en.wikipedia.org/wiki/Fruit"] {
  background-color: #2694d8;
}

ol li:first-child {
  color: #719e47;
}

ol li:last-child {
  color: #2aa198;
}

ul ~ .types li:nth-child(odd) {
  background-color: #657ba3;
}

ul ~ .types li:nth-child(even) {
  background-color: #586e75;
}

ul ~ .types li:nth-child(3n) {
  background-color: #d04b16;
}

